[package]
name = "rustventure"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Tiny text adventure engine"
repository = "https://github.com/airtower-luna/rustventure"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
regex = "1"
clap = { version = "4", features = ["cargo", "derive"] }
yaml-rust = "0.4"
